# shell

./: .gitignore  .shellrc  CMakeLists.txt  Makefile  README.md  a.out  basic_grammar  command.cpp  command.h  exec.cpp  exec.h  file  misc.cpp  parser  parser.cpp  parser_main.cpp  pipe.c  rules  shell  shell.cpp  shell.h  shell_main.cpp  stdouterr.cpp  tee.cpp  token_main.cpp  tokenizer.cpp  tokenizer.h
include/: ast.h  built-in.h  c_headers.h  command.h  exec.h  expansion.h  jobs.h  misc.h  parser.h  pipe_selector.h  process.h  shell.h  shell_util.h  tokenizer.h  trie.h
src/: ast.cpp  ast_arg.cpp  ast_subshell.cpp  autocomplete.cpp  built-in.cpp  cat.cpp  command.cpp  exec.cpp  expansion.cpp  jobs.cpp  lex.l  misc.cpp  parser.cpp  parser_main.cpp  pipe.c  process.cpp  read_line.cpp  read_line_main.cpp  shell.cpp  shell_main.cpp  tee.cpp  token_main.cpp  tokenizer.cpp  trie.cpp  tty_raw_mode.cpp  yacc.y  yacc.yy.hpp
src/ast/: ast.cpp  ast_arg.cpp  command.cpp
src/autocomplete/: autocomplete.cpp  trie.cpp
src/built_ins/: built_in_alias.cpp  built_in_bg.cpp  built_in_cd.cpp  built_in_fg.cpp  built_in_help.cpp  built_in_printenv.cpp  built_in_setenv.cpp  built_in_source.cpp  built_in_unsetenv.cpp  (+1 more)
testing/: test_basic_commands  test_cd  test_command_substitution  test_escape  test_exit  test_pipe  test_pipe_redirect  test_process_substitution  test_quotes  test_redirect_append  test_redirect_error  test_redirect_input  test_redirect_multiple  test_redirect_outerr  test_redirect_output  test_setenv  test_source  test_subshell  test_unsetenv  test_zombie  testall
(+70 files in other folders)
